Adding support for updating stock on order creation
