# backend/swagger.yml
@@ -7,17 +7,16 @@ consumes:
   - "application/json"
 produces:
   - "application/json"
-
 basePath: "/api"
+
 
 #Global API Key Security
 #security:
 #  - APIKeyHeader: []
 
-#Change definitions soon
-# Paths supported by the server application
 
 paths:
+# Sys_user related endpoints
   /authenticate/default:
     post:
       operationId: endpoint_entry.user_authenticate_default
@@ -127,6 +126,157 @@ paths:
                 type: object
 
 
+  /users/all:
+    get:
+      operationId: endpoint_entry.get_all_users
+      description: Return all sys_users in the database
+      responses:
+        200:
+          description: List of all sys_users
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+
+
+  /create/user:
+    post:
+      operationId: endpoint_entry.user_create
+      description: Create a new sys_user with JSON data
+      parameters:
+        - name: new_user
+          in: body
+          description: Data wrapper
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  name_first:
+                    type: string
+                    description: First name of new user
+                  name_last:
+                    type: string
+                    description: Last name of new user
+                  sys_username:
+                    type: string
+                    description: Username of new user
+                  password:
+                    type: string
+                    description: Password of new user
+                  email_google:
+                    type: string
+                    description: Google email of new user
+                  email_fb:
+                    type: string
+                    description: Facebook email of new user
+                  image_url:
+                    type: string
+                    description: Profile image of new user
+                  phone_number:
+                    type: string
+                    x-nullable: true
+                    description: Phone number of new user
+                  role:
+                    type: integer
+                    description: Sys_user_role database id of new user's role
+                required:
+                 - name_first
+                 - name_last
+                 - sys_username
+                 - password
+                 - email_google
+                 - email_fb
+                 - image_url
+                 - phone_number
+                 - role
+            required:
+             - data
+      responses:
+        200:
+          description: Return data for newly created shop order 
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+
+
+# Order_taker_goal related endpoints
+  /goal/order_taker:
+    post:
+      operationId: endpoint_entry.goal_order_taker
+      description: Get the goal data for a order taker for this month with JSON data
+      parameters:
+        - name: order_taker_info
+          in: body
+          description: order_taker to get data for
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                description: Data wrapper
+                properties:
+                  order_taker_id:
+                    type: integer
+                    description: Database id of order taker
+                required:
+                 - order_taker_id
+            required:
+             - data
+      responses:
+        200:
+          description: goal_order_taker data 
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+
+
+  /goal/order_taker/new:
+    post:
+      operationId: endpoint_entry.goal_order_taker_new
+      description: Create goal data for a order taker for this month with JSON data
+      parameters:
+        - name: goal_info
+          in: body
+          description: order_taker to get data for
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                description: Data wrapper
+                properties:
+                  order_taker_id:
+                    type: integer
+                    description: Database id of order taker
+                  goal_total:
+                    type: number
+                    description: Money value of goal
+                required:
+                 - order_taker_id
+                 - goal_total
+            required:
+             - data
+      responses:
+        200:
+          description: goal_order_taker data 
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+
+
+# Company_product related endpoints
   /inventory:
     get:
       operationId: endpoint_entry.get_company_product
@@ -178,6 +328,7 @@ paths:
                 type: array
 
 
+# Shop_order related endpoints
   /orders/not_delivered:
     get:
       operationId: endpoint_entry.get_order_not_delivered
@@ -206,6 +357,107 @@ paths:
                 type: array
 
 
+  /deliver/shop_order:
+    post:
+      operationId: endpoint_entry.shop_order_update
+      description: Update a shop order as delivered with JSON data
+      parameters:
+        - name: update_shop_order
+          in: body
+          description: User to create
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                description: Email of user to create
+                properties:
+                  shop_order_id:
+                    type: integer
+                    description: Email of user to create
+                  order_fulfiller_id:
+                    type: integer
+                    description: Email of user to create
+                required:
+                 - shop_order_id
+                 - order_fulfiller_id
+            required:
+             - data
+      responses:
+        200:
+          description: Successful read user list 
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+
+
+  /create/shop_order:
+    post:
+      operationId: endpoint_entry.shop_order_create
+      description: Create a new shop order with JSON data
+      parameters:
+        - name: new_shop_order
+          in: body
+          description: Data wrapper
+          required: True
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  shop_id:
+                    type: integer
+                    description: Shop database id that the order is placed for
+                  price_paid:
+                    type: boolean
+                    description: True if the order was paid for when the order was taken
+                  deliver_days_from_today:
+                    type: integer
+                    description: Days from today that the order will be delivered
+                  memo:
+                    type: string
+                    description: Shop order memo
+                  order_taker_id:
+                    type: integer
+                    description: Order Taker database id
+                  order_items:
+                    type: array
+                    description: Array of items ordered by the shop
+                    items:
+                      properties:
+                        id:
+                          type: integer
+                          description: Company product database id
+                        quantity_units:
+                          type: integer
+                          description: Ammount of company product ordered
+                      required:
+                       - id
+                       - quantity_units
+                required:
+                 - shop_id
+                 - price_paid
+                 - deliver_days_from_today
+                 - memo
+                 - order_taker_id
+                 - order_items
+            required:
+             - data
+      responses:
+        200:
+          description: Return data for newly created shop order 
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+
+
+# Shop related endpoints
   /shops/all:
     get:
       operationId: endpoint_entry.get_all_shops
@@ -213,34 +465,6 @@ paths:
       responses:
         200:
           description: List of all shops
-          schema:
-            type: object
-            properties:
-              data:
-                type: array
-
-
-  /zones/all:
-    get:
-      operationId: endpoint_entry.get_all_zones
-      description: Return all zones in database
-      responses:
-        200:
-          description: List of all zones 
-          schema:
-            type: object
-            properties:
-              data:
-                type: array
-
-
-  /shop_categories/all:
-    get:
-      operationId: endpoint_entry.get_all_shop_category
-      description: Return all shop categories in database
-      responses:
-        200:
-          description: List of all shop categories
           schema:
             type: object
             properties:
@@ -325,36 +549,19 @@ paths:
                 type: object
 
 
-  /create/zone:
-    post:
-      operationId: endpoint_entry.zone_create
-      description: Create a new zone with JSON data
-      parameters:
-        - name: new_zone
-          in: body
-          description: Data wrapper
-          required: True
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                properties:
-                  name:
-                    type: string
-                    description: Zone name
-                required:
-                 - name
-            required:
-             - data
+# Shop_category related endpoints
+  /shop_categories/all:
+    get:
+      operationId: endpoint_entry.get_all_shop_category
+      description: Return all shop categories in database
       responses:
         200:
-          description: Return data for newly created zone 
+          description: List of all shop categories
           schema:
             type: object
             properties:
               data:
-                type: object
+                type: array
 
 
   /create/shop_category:
@@ -389,12 +596,27 @@ paths:
                 type: object
 
 
-  /create/shop_order:
+# Zone related endpoints
+  /zones/all:
+    get:
+      operationId: endpoint_entry.get_all_zones
+      description: Return all zones in database
+      responses:
+        200:
+          description: List of all zones 
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+
+
+  /create/zone:
     post:
-      operationId: endpoint_entry.shop_order_create
-      description: Create a new shop order with JSON data
+      operationId: endpoint_entry.zone_create
+      description: Create a new zone with JSON data
       parameters:
-        - name: new_shop_order
+        - name: new_zone
           in: body
           description: Data wrapper
           required: True
@@ -404,219 +626,16 @@ paths:
               data:
                 type: object
                 properties:
-                  shop_id:
-                    type: integer
-                    description: Shop database id that the order is placed for
-                  price_paid:
-                    type: boolean
-                    description: True if the order was paid for when the order was taken
-                  deliver_days_from_today:
-                    type: integer
-                    description: Days from today that the order will be delivered
-                  memo:
+                  name:
                     type: string
-                    description: Shop order memo
-                  order_taker_id:
-                    type: integer
-                    description: Order Taker database id
-                  order_items:
-                    type: array
-                    description: Array of items ordered by the shop
-                    items:
-                      properties:
-                        id:
-                          type: integer
-                          description: Company product database id
-                        quantity_units:
-                          type: integer
-                          description: Ammount of company product ordered
-                      required:
-                       - id
-                       - quantity_units
+                    description: Zone name
                 required:
-                 - shop_id
-                 - price_paid
-                 - deliver_days_from_today
-                 - memo
-                 - order_taker_id
-                 - order_items
+                 - name
             required:
              - data
       responses:
         200:
-          description: Return data for newly created shop order 
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-
-
-  /create/user:
-    post:
-      operationId: endpoint_entry.user_create
-      description: Create a new sys_user with JSON data
-      parameters:
-        - name: new_user
-          in: body
-          description: Data wrapper
-          required: True
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                properties:
-                  name_first:
-                    type: string
-                    description: First name of new user
-                  name_last:
-                    type: string
-                    description: Last name of new user
-                  sys_username:
-                    type: string
-                    description: Username of new user
-                  password:
-                    type: string
-                    description: Password of new user
-                  email_google:
-                    type: string
-                    description: Google email of new user
-                  email_fb:
-                    type: string
-                    description: Facebook email of new user
-                  image_url:
-                    type: string
-                    description: Profile image of new user
-                  phone_number:
-                    type: string
-                    x-nullable: true
-                    description: Phone number of new user
-                  role:
-                    type: integer
-                    description: Sys_user_role database id of new user's role
-                required:
-                 - name_first
-                 - name_last
-                 - sys_username
-                 - password
-                 - email_google
-                 - email_fb
-                 - image_url
-                 - phone_number
-                 - role
-            required:
-             - data
-      responses:
-        200:
-          description: Return data for newly created shop order 
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-
-
-  /deliver/shop_order:
-    post:
-      operationId: endpoint_entry.shop_order_update
-      description: Update a shop order as delivered with JSON data
-      parameters:
-        - name: update_shop_order
-          in: body
-          description: User to create
-          required: True
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                description: Email of user to create
-                properties:
-                  shop_order_id:
-                    type: integer
-                    description: Email of user to create
-                  order_fulfiller_id:
-                    type: integer
-                    description: Email of user to create
-                required:
-                 - shop_order_id
-                 - order_fulfiller_id
-            required:
-             - data
-      responses:
-        200:
-          description: Successful read user list 
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-
-
-  /goal/order_taker:
-    post:
-      operationId: endpoint_entry.goal_order_taker
-      description: Get the goal data for a order taker for this month with JSON data
-      parameters:
-        - name: order_taker_info
-          in: body
-          description: order_taker to get data for
-          required: True
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                description: Data wrapper
-                properties:
-                  order_taker_id:
-                    type: integer
-                    description: Database id of order taker
-                required:
-                 - order_taker_id
-            required:
-             - data
-      responses:
-        200:
-          description: goal_order_taker data 
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-
-
-  /goal/order_taker/new:
-    post:
-      operationId: endpoint_entry.goal_order_taker_new
-      description: Create goal data for a order taker for this month with JSON data
-      parameters:
-        - name: goal_info
-          in: body
-          description: order_taker to get data for
-          required: True
-          schema:
-            type: object
-            properties:
-              data:
-                type: object
-                description: Data wrapper
-                properties:
-                  order_taker_id:
-                    type: integer
-                    description: Database id of order taker
-                  goal_total:
-                    type: number
-                    description: Money value of goal
-                required:
-                 - order_taker_id
-                 - goal_total
-            required:
-             - data
-      responses:
-        200:
-          description: goal_order_taker data 
+          description: Return data for newly created zone 
           schema:
             type: object
             properties:
